<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driving"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremy.androidwearheartrate.DrivingActivity"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:paddingTop="10dp"
        android:id="@+id/lin1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/bpm"
            android:ems="10"
            android:id="@+id/editText4"
            android:textSize="18sp" />

        <ProgressBar
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:id="@+id/progressBar4"
            android:indeterminate="false"
            android:progress="30"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/face"
            android:ems="10"
            android:id="@+id/editText5"
            android:textSize="18sp" />

        <ProgressBar
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/progressBar6"
            android:progress="60"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/ready"
            android:ems="10"
            android:id="@+id/editText6"
            android:textSize="18sp" />

        <ProgressBar
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:id="@+id/progressBar7"
            android:progress="40"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_height="40dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"></LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:ems="10"
            android:id="@+id/editText2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/editText3"
            android:background="@color/green" />
    </LinearLayout>

</LinearLayout>
