<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_summary_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_weight="2">-->

        <!--<TextView-->
            <!--android:text="Hello World"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:id="@+id/aaa"-->
            <!--android:layout_weight="1"/>-->

        <!--<TextView-->
            <!--android:text="Not too close"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/ccc"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_weight="1"/>-->

        <!--<TextView-->
            <!--android:text="Proximity Here"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/bbb"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_weight="1"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="7">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/ic_favorite_black_24dp"
            android:tint="@color/red"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bpm"
                android:textSize="15dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Heart Rate: " />

                <TextView
                    android:id="@+id/hrtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change me" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="7"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/ic_wb_sunny_black_24dp"
            android:tint="@color/sunyellow"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bright"
                android:textSize="15dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perceived Brightness: " />

                <TextView
                    android:id="@+id/lighttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change me" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="7">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/ic_whatshot_black_24dp"
            android:tint="@color/wallet_holo_blue_light"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textSize="15dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ambient Temperature: " />

                <TextView
                    android:id="@+id/temptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change me" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
